<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.bund.bsi.tr-esor</groupId>
	<artifactId>tresor-etsi-ts119512-transformator</artifactId>
	<packaging>pom</packaging>
	<name>TR-ESOR Transformator</name>
	<version>2.0.0</version>

	<inceptionYear>2021</inceptionYear>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<organization>
		<name>Federal Office for Information Security (BSI)</name>
		<url>https://bsi.bund.de/</url>
	</organization>

	<developers>
		<developer>
			<name>Florian Otto</name>
			<organization>ecsec GmbH</organization>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<name>Tobias Wich</name>
			<organization>ecsec GmbH</organization>
			<roles>
				<role>maintainer</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.min.version>3.8.1</maven.min.version>

		<version.cxf>3.5.2</version.cxf>

		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.version>2.9.1.Final</quarkus.platform.version>
		<quarkus-plugin.version>2.9.1.Final</quarkus-plugin.version>
		<quarkus.cxf.version>1.1.0</quarkus.cxf.version>

		<testcontainers.version>1.17.1</testcontainers.version>

		<!-- fix for netbeans as it executes the surefire:test task directly -->
		<argLine>-Djdk.attach.allowAttachSelf</argLine>
	</properties>


	<modules>
		<module>wsdl</module>
		<module>service</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<rules>
							<requireMavenVersion>
								<version>[${maven.min.version},)</version>
							</requireMavenVersion>
						</rules>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.10.0</version>
				</plugin>

				<plugin>
					<groupId>${quarkus.platform.group-id}</groupId>
					<artifactId>quarkus-maven-plugin</artifactId>
					<version>${quarkus-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-codegen-plugin</artifactId>
					<version>${version.cxf}</version>
				</plugin>

				<plugin>
					<groupId>io.github.zlika</groupId>
					<artifactId>reproducible-build-maven-plugin</artifactId>
					<version>0.15</version>
				</plugin>

				<plugin>
					<groupId>org.owasp</groupId>
					<artifactId>dependency-check-maven</artifactId>
					<version>7.1.0</version>
					<configuration>
						<!--skipProvidedScope>true</skipProvidedScope>
						<skipRuntimeScope>true</skipRuntimeScope>
						<skipTestScope>true</skipTestScope-->
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>${quarkus.platform.artifact-id}</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers</artifactId>
				<version>${testcontainers.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${testcontainers.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>io.quarkiverse.cxf</groupId>
				<artifactId>quarkus-cxf</artifactId>
				<version>${quarkus.cxf.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>check-sec</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>aggregate</goal>
								</goals>
								<configuration>
									<!--failBuildOnCVSS>8</failBuildOnCVSS-->
									<failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>check-updates</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>versions-maven-plugin</artifactId>
						<executions>
							<execution>
								<phase>validate</phase>
								<goals>
									<goal>display-plugin-updates</goal>
									<goal>display-property-updates</goal>
									<!--<goal>display-dependency-updates</goal>-->
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>docker</id>
			<properties>
				<quarkus.container-image.build>true</quarkus.container-image.build>
			</properties>
		</profile>
	</profiles>

</project>
